:lipstick: fix gap

--- a/src/components/LobbyForm/lobbyform.scss
+++ b/src/components/LobbyForm/lobbyform.scss
@@ -7,7 +7,7 @@
 
 	.button {
 		width: 200px;
-		margin-top: 2rem;
+		margin-top: 1.5rem;
 	}
 
 	.invite {
